--- a/params.yaml
+++ b/params.yaml
@@ -1,18 +1,19 @@
 seed: 123
 gpu: 0
+log_interval: 500
 
 basic:
   vocab_size: 30000
   min_freq: 3
 
-model: "mlp"
-log_interval: 500
+model:
+  arch: "mlp"
+  embed_dim: 50
 
 train:
   batch_size: 64
   shuffle: true
   epochs: 10
-  embed_dim: 50
   optimizer:
     lr: 0.01
     step_lr: 1.0
