--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ VOCAB_PATH=outputs/vocab.plk
 MODEL_PATH=outputs/checkpoint.pth
 CONFIG_PATH=outputs/config.json
 RESULTS_PATH=outputs/results.json
+SUBMISSION_PATH=outputs/submission.csv
