--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,7 +1,7 @@
 stages:
   build:
-    cmd: export MODEL_PATH=outputs/checkpoint.pth CONFIG_PATH=outputs/config.json
-      RESULTS_PATH=outputs/results.json
+    cmd: export VOCAB_PATH=outputs/vocab.plk MODEL_PATH=outputs/checkpoint.pth CONFIG_PATH=outputs/config.json
+      RESULTS_PATH=outputs/results.json SUBMISSION_PATH=outputs/submission.csv
     always_changed: true
   prepare:
     cmd: python prepare.py
