--- a/params.yaml
+++ b/params.yaml
@@ -2,8 +2,8 @@ seed: 123
 gpu: 0
 log_interval: 500
 
-feature: sentiment
-label: review
+feature: review
+label: sentiment
 
 basic:
   vocab_size: 30000
