--- a/params.yaml
+++ b/params.yaml
@@ -14,7 +14,11 @@ basic:
 model:
   arch: "mlp"
   embed_dim: 50
+  use_bag: false
   sent_len: 256
+  hidden_size: 256
+  n_layers: 2
+  dropout: 0.33
 
 train:
   batch_size: 64
