--- a/params.yaml
+++ b/params.yaml
@@ -12,10 +12,10 @@ basic:
   min_freq: 3
 
 model:
-  arch: "mlp"
+  arch: "lstm"
   embed_dim: 50
   use_bag: false
-  sent_len: 256
+  attention_method: "concat"
   hidden_size: 256
   n_layers: 2
   dropout: 0.33
@@ -23,10 +23,10 @@ model:
 train:
   batch_size: 64
   shuffle: true
-  epochs: 10
-  kfold: 10
+  epochs: 1
+  kfold: 2
   optimizer:
-    lr: 0.01
+    lr: 0.0001
     step_lr: 1.0
     gamma: 0.1
     clip: 0.1
