update mlp with kaiming initialization

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -22,6 +22,7 @@ stages:
       - scripts/train.py
       params:
       - ${item}
+      - train
       metrics:
       - outputs/${item}_results.json:
           cache: false
