update plots format

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -27,7 +27,7 @@ stages:
       - outputs/${item}_results.json:
           cache: false
       plots:
-      - outputs/${item}_plots.json:
+      - outputs/${item}_plots.csv:
           cache: false
       outs:
       - outputs/${item}_checkpoint.pth
