--- a/envs/.env
+++ b/envs/.env
@@ -3,5 +3,5 @@ VOCAB_PATH=vocab.plk
 MODEL_PATH=checkpoint.pth
 CONFIG_PATH=config.json
 RESULTS_PATH=results.json
-PLOTS_PATH=plots.json
+PLOTS_PATH=plots.csv
 SUBMISSION_PATH=submission.csv
