--- a/params.yaml
+++ b/params.yaml
@@ -48,7 +48,7 @@ selected:
   dropout: 0.33
 
 train:
-  batch_size: 128
+  batch_size: 32
   shuffle: true
   epochs: 2
   kfold: 10
@@ -57,7 +57,7 @@ train:
     step_lr: 2.0
     gamma: 0.5
     clip: 1.0
-    weight_decay: 0.001
+    weight_decay: 1e-05
 
 evaluate:
   batch_size: 200
