--- a/params.yaml
+++ b/params.yaml
@@ -61,15 +61,15 @@ train:
 validate:
   batch_size: 64
   shuffle: true
-  epochs: 20
+  epochs: 10
   kfold: 10
   early_stops: 3
   optimizer:
-    lr: 1e-05
+    lr: 0.001
     step_lr: 2.0
     gamma: 0.5
     clip: 1.0
-    weight_decay: 0.0001
+    weight_decay: 1e-06
 
 evaluate:
   batch_size: 200
