--- a/params.yaml
+++ b/params.yaml
@@ -61,7 +61,7 @@ train:
     weight_decay: 1e-05
 
 validate:
-  batch_size: 8
+  batch_size: 32
   shuffle: true
   epochs: 4
   kfold: 10
@@ -80,6 +80,6 @@ bert:
   max_len: 128
   eval_max_len: 512
   basic:
-    pretrained_model: "bert-base-uncased"
+    pretrained_model: bert-base-uncased
     hidden_size: 768
     dropout: 0.1
