--- a/params.yaml
+++ b/params.yaml
@@ -83,3 +83,10 @@ bert:
     pretrained_model: bert-base-uncased
     hidden_size: 768
     dropout: 0.1
+  lstm:
+    pretrained_model: bert-base-uncased
+    bert_hidden_size: 768
+    hidden_size: 512
+    dropout: 0.1
+    n_layers: 2
+    attention_method: concat
