--- a/params.yaml
+++ b/params.yaml
@@ -50,15 +50,15 @@ selected:
   dropout: 0.33
 
 train:
-  batch_size: 64
+  batch_size: 32
   shuffle: true
-  epochs: 1
+  epochs: 4
   optimizer:
-    lr: 0.0001
+    lr: 2e-5
     step_lr: 2.0
     gamma: 0.5
     clip: 1.0
-    weight_decay: 1e-05
+    weight_decay: 0
 
 validate:
   batch_size: 32
