--- a/params.yaml
+++ b/params.yaml
@@ -78,8 +78,23 @@ evaluate:
 
 bert:
   max_len: 128
-  eval_max_len: 512
+  eval_max_len: 128
   pretrained_model: bert-base-uncased
+  basic:
+    hidden_size: 768
+    dropout: 0.1
+  lstm:
+    bert_hidden_size: 768
+    hidden_size: 512
+    dropout: 0.1
+    n_layers: 2
+    attention_method: concat
+
+
+xlnet:
+  max_len: 128
+  eval_max_len: 128
+  pretrained_model: xlnet-base-cased
   basic:
     hidden_size: 768
     dropout: 0.1
