--- a/params.yaml
+++ b/params.yaml
@@ -98,6 +98,8 @@ xlnet:
   bert_hidden_size: 768
   basic:
     dropout: 0.1
+  sequence_classification:
+    dropout: 0.1
   lstm:
     hidden_size: 512
     dropout: 0.1
