--- a/params.yaml
+++ b/params.yaml
@@ -79,21 +79,29 @@ evaluate:
 bert:
   max_len: 128
   eval_max_len: 128
+  bert_hidden_size: 768
   pretrained_model: bert-base-uncased
   basic:
-    hidden_size: 768
     dropout: 0.1
   lstm:
-    bert_hidden_size: 768
     hidden_size: 512
     dropout: 0.1
     n_layers: 2
     attention_method: concat
 
 
+bert_large:
+  max_len: 128
+  eval_max_len: 512
+  pretrained_model: bert-large-uncased
+  bert_hidden_size: 1024
+  basic:
+    dropout: 0.1
+
+
 xlnet:
   max_len: 128
-  eval_max_len: 128
+  eval_max_len: 512
   pretrained_model: xlnet-base-cased
   basic:
     hidden_size: 768
