--- a/params.yaml
+++ b/params.yaml
@@ -104,3 +104,12 @@ xlnet:
     dropout: 0.1
     n_layers: 2
     attention_method: concat
+
+
+roberta:
+  do_lower_case: true
+  max_len: 128
+  eval_max_len: 512
+  bert_hidden_size: 768
+  sentiment:
+    dropout: 0.1
