--- a/dvc.yaml
+++ b/dvc.yaml
@@ -136,26 +136,37 @@ stages:
 
   train_bert:
     foreach: # List of simple values
-      - basic
-      - lstm
-    do:
-      cmd: python -m scripts.train_bert bert ${item}
-      deps:
-      - data/all.csv
-      - scripts/train_bert.py
-      params:
-      - bert.max_len
-      - bert.${item}
-      - bert.pretrained_model
-      - train
-      metrics:
-        - outputs/bert-${item}_results.json:
-            cache: false
-      plots:
-        - outputs/bert-${item}_plots.csv:
-            cache: false
-      outs:
-        - outputs/bert-${item}_checkpoint.pth
+      bert-base-uncased_basic:
+        pretrained_model: bert-base-uncased
+        method: basic
+      bert-base-uncased_lstm:
+        pretrained_model: bert-base-uncased
+        method: lstm
+      bert-large-uncased_basic:
+        pretrained_model: bert-large-uncased
+        method: basic
+      bert-large-uncased_lstm:
+        pretrained_model: bert-large-uncased
+        method: lstm
+      do:
+        cmd: python -m scripts.train_bert bert ${item.pretrained_model} ${item.method}
+        deps:
+          - data/all.csv
+          - model/bert/${item.method}.py
+          - scripts/train_bert.py
+        params:
+          - bert.max_len
+          - bert.do_lower_case
+          - bert.${item.method}
+          - train
+        metrics:
+          - outputs/bert-${item.pretrained_model}-${item.method}_results.json:
+              cache: false
+        plots:
+          - outputs/bert-${item.pretrained_model}-${item.method}_plots.csv:
+              cache: false
+        outs:
+          - outputs/bert-${item.pretrained_model}-${item.method}_checkpoint.pth
 
   inference:
     foreach: # List of simple values
@@ -175,13 +186,23 @@ stages:
 
   inference_bert:
     foreach: # List of simple values
-      - basic
-      - lstm
-    do:
-      cmd: python -m scripts.inference_bert bert ${item}
-      deps:
-        - data/test.csv
-        - scripts/inference_bert.py
-        - outputs/bert-${item}_checkpoint.pth
-      outs:
-        - outputs/bert-${item}_submission.csv
+      bert-base-uncased_basic:
+        pretrained_model: bert-base-uncased
+        method: basic
+      bert-base-uncased_lstm:
+        pretrained_model: bert-base-uncased
+        method: lstm
+      bert-large-uncased_basic:
+        pretrained_model: bert-large-uncased
+        method: basic
+      bert-large-uncased_lstm:
+        pretrained_model: bert-large-uncased
+        method: lstm
+      do:
+        cmd: python -m scripts.inference_bert bert ${item.pretrained_model} ${item.method}
+        deps:
+          - data/test.csv
+          - scripts/inference_bert.py
+          - outputs/bert-${item.pretrained_model}-${item.method}_checkpoint.pth
+        outs:
+          - outputs/bert-${item.pretrained_model}-${item.method}_submission.csv
