--- a/.dvc/config
+++ b/.dvc/config
@@ -2,3 +2,5 @@
     remote = gdrive
 ['remote "gdrive"']
     url = gdrive://1JSXiXSKJgSEwgcEwxxi6xgH8r1Mrv8vO
+['remote "local"']
+    url = /data/model
