--- a/outputs/.gitignore
+++ b/outputs/.gitignore
@@ -16,3 +16,5 @@
 /bert-bert-large-uncased-basic_submission.csv
 /roberta-roberta-large-basic_checkpoint.pth
 /roberta-roberta-large-basic_submission.csv
+/xlnet-xlnet-large-cased-basic_checkpoint.pth
+/xlnet-xlnet-large-cased-basic_submission.csv
