--- a/params.yaml
+++ b/params.yaml
@@ -50,7 +50,7 @@ selected:
   dropout: 0.33
 
 train:
-  batch_size: 16
+  batch_size: 32
   shuffle: true
   epochs: 6
   early_stops: 2
@@ -84,6 +84,10 @@ bert:
   bert_hidden_size: 1024
   basic:
     dropout: 0.1
+  cnn:
+    dropout: 0.1
+    hidden_size: 1024
+    kernel_size: 3
   lstm:
     hidden_size: 768
     dropout: 0.1
@@ -98,6 +102,10 @@ xlnet:
   bert_hidden_size: 1024
   basic:
     dropout: 0.1
+  cnn:
+    dropout: 0.1
+    hidden_size: 1024
+    kernel_size: 3
 
 
 roberta:
@@ -107,3 +115,7 @@ roberta:
   bert_hidden_size: 1024
   basic:
     dropout: 0.1
+  cnn:
+    dropout: 0.1
+    hidden_size: 1024
+    kernel_size: 3
