--- a/dvc.yaml
+++ b/dvc.yaml
@@ -257,6 +257,9 @@ stages:
       bert-large-uncased_basic:
         pretrained_model: bert-large-uncased
         method: basic
+      bert-large-uncased_cnn:
+        pretrained_model: bert-large-uncased
+        method: cnn
       bert-large-uncased_lstm:
         pretrained_model: bert-large-uncased
         method: lstm
@@ -294,6 +297,9 @@ stages:
       roberta-large_basic:
         pretrained_model: roberta-large
         method: basic
+      roberta-large_cnn:
+        pretrained_model: roberta-large
+        method: cnn
     do:
       cmd: python -m scripts.inference_bert roberta ${item.pretrained_model} ${item.method}
       params:
